# SportGUI

./: .gitignore  SportsInventory.spec  main.py  pyproject.toml  setup.iss
assets/data/: Item.json
assets/data/item/: item.json
assets/data/itemgenerator/: DefaultItemGen.json
assets/data/user/: 123.json  1234.json  StormRunner.json  TheRisingStorm.json  Trainer_Storm.json  admin.json
local/lang/: en.json  eng.json  ru.json
local/theme/: dark.json  light.json
src/: UI.py  auth.py  config.py  exceptions.py  generator.py  main.py  models.py  ui_dialogs.py  ui_managers.py  ui_screens.py
